# mct-dynamics

./: CMakeLists.txt  CMakePresets.json  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt
apps/mct-solve/: CMakeLists.txt
apps/mct-solve/src/: main.cpp
legacy/: CCorr.plt  CKern.plt  CMakeLists.txt  Correlator.cpp  Correlator.h  Ctest.plt  MCTdynamics  MCTdynamics.cpp  MCTdynamics_sample.cpp  MSD.cpp  MSD.h  MSDtest.plt  Makefile  Mesh.cpp  Mesh.h  Prefactor.ods  Structure.cpp  Structure.h  TCorr.plt  TKern.plt  TTest.ods  Ttest.plt  Utils.cpp  Utils.h  VACFtest.plt  constants.h  kerplot.tex  msd_diff.py  multi.plt  plot.plt  plotall  test.cpp  test.plt
